--- a/public_html/Project/styles.css
+++ b/public_html/Project/styles.css
@@ -14,10 +14,10 @@
     background-color: teal;
 }
 nav li{display: inline; background-color: rebeccapurple;}
-nav li a{color: hotpink}
+nav li a{color: rgb(218, 227, 228)}
 input{border-radius: 50%;}
 body{
-    background-color: hotpink;
+    background-color: rgb(231, 238, 240);
     color: rgb(153, 0, 153);
 
 }
